--- a/cypress-testes/package.json
+++ b/cypress-testes/package.json
@@ -5,12 +5,11 @@
   "main": "index.js",
   "scripts": {
     "cy:open": "cypress open",
-    "cy:open": "cypress open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "cypress": "^13.8.1"
+  "devDependencies": {
+    "cypress": "^13.14.2"
   }
 }
